[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/textures/background.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/roboto-64.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/roboto-48.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/textures/settings.png" type="Texture" id=4]
[ext_resource path="res://src/UI/Credits.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/UI/main_menu.gd" type="Script" id=7]
[ext_resource path="res://assets/textures/music.png" type="Texture" id=8]
[ext_resource path="res://assets/textures/SoundsEffect.png" type="Texture" id=9]
[ext_resource path="res://assets/textures/x.png" type="Texture" id=10]
[ext_resource path="res://src/UI/settings_background.gd" type="Script" id=12]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -242.5
margin_right = 300.0
margin_bottom = 242.5
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
margin_right = 600.0
margin_bottom = 250.0
rect_min_size = Vector2( 600, 250 )
expand = true

[node name="PlayButton" type="Button" parent="VBoxContainer"]
margin_left = 150.0
margin_top = 280.0
margin_right = 450.0
margin_bottom = 380.0
rect_min_size = Vector2( 300, 100 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 2 )
text = "Play"

[node name="Credits" type="Button" parent="VBoxContainer"]
margin_left = 187.0
margin_top = 410.0
margin_right = 412.0
margin_bottom = 485.0
rect_min_size = Vector2( 225, 75 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 3 )
text = "Credits"

[node name="SettingsButton" type="Button" parent="."]
margin_left = 20.0
margin_top = 19.0
margin_right = 96.0
margin_bottom = 89.0
icon = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsBackground" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.721569 )
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsMenu" type="VBoxContainer" parent="SettingsBackground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -78.0
margin_top = -35.0
margin_right = 78.0
margin_bottom = 35.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sonor" type="HBoxContainer" parent="SettingsBackground/SettingsMenu"]
margin_right = 156.0
margin_bottom = 70.0

[node name="SoundsEffectButton" type="Button" parent="SettingsBackground/SettingsMenu/Sonor"]
margin_right = 76.0
margin_bottom = 70.0
icon = ExtResource( 9 )

[node name="x" type="Sprite" parent="SettingsBackground/SettingsMenu/Sonor/SoundsEffectButton"]
visible = false
position = Vector2( 60, 60 )
texture = ExtResource( 10 )

[node name="MusicButton" type="Button" parent="SettingsBackground/SettingsMenu/Sonor"]
margin_left = 80.0
margin_right = 156.0
margin_bottom = 70.0
icon = ExtResource( 8 )

[node name="x" type="Sprite" parent="SettingsBackground/SettingsMenu/Sonor/MusicButton"]
visible = false
position = Vector2( 60, 60 )
texture = ExtResource( 10 )

[node name="Credits" parent="." instance=ExtResource( 6 )]

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="gui_input" from="SettingsBackground" to="SettingsBackground" method="_on_SettingsBackground_gui_input"]
[connection signal="pressed" from="SettingsBackground/SettingsMenu/Sonor/SoundsEffectButton" to="SettingsBackground" method="_on_SoundsEffectButton_pressed"]
[connection signal="pressed" from="SettingsBackground/SettingsMenu/Sonor/MusicButton" to="SettingsBackground" method="_on_MusicButton_pressed"]
